[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yolo_water_wrapper"
version = "0.0.1"
authors = [
  { name="Vladislav Diuzhev", email="vladdiuzhev@gmail.com" },
]
description = "A small package for yolo water detection wrapper."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/diuzhevVlad/yolo_water_wrapper"
